--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,1 +1,29 @@
-body {background-color: lightgreen;}
+body { 
+    background-color: black;
+    text-align: center;
+}
+
+h1 {
+    font-family: verdana;
+    font-weight: normal;
+    font-size: 50px;
+    color: white;
+    text-align: center;
+}
+
+a {
+    color: aquamarine;
+    font-size: 16px;
+}
+
+h2 { 
+    font-family: verdana;
+    font-weight: 300;
+    font-size: 42px;
+}
+
+p {
+    font-family: verdana;
+    font-size: 21px;
+    color: gray;
+}
